2006-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-copy-size-limit): New defcustom.
	(tramp-methods): Add "ControlPath" and "ControlMaster" to scp,
	scp1 and scp2 methods.  Suggested by Andreas Schwab
	<schwab@suse.de>.  Rearrange entries for better readability.
	Change syntax of `tramp-copy-args' to that of `tramp-login-args'.
	Describe "%t" in the doc string.
	(tramp-default-method): scp is the default method.
	(tramp-do-copy-or-rename-file, tramp-handle-file-local-copy)
	(tramp-handle-write-region): Check for `tramp-copy-size-limit'.
	(tramp-do-copy-or-rename-file-out-of-band): Simplify
	implementation.
	(tramp-maybe-open-connection): Compute format spec only once.

2006-11-05  Lars Hansen  <larsh@soem.dk>

	* tramp.el (with-parsed-tramp-file-name): Correct debug spec.
	Highlight as keyword.
	(tramp-do-copy-or-rename-file): Correct data for
	'file-already-exists.
	(tramp-touch): Quote file name.

2006-10-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Add question from plink.
	(tramp-message): Reduce messages in minibuffer.
	(tramp-handle-call-process): Fix error in error handling.
	(tramp-touch): UTC handling is not possible for XEmacs.

	* tramp-cache.el (top): Don't autoload macro
	`with-parsed-tramp-file-name' but function
	`tramp-dissect-file-name'.
	(tramp-cache-before-revert-function): Change implementation
	accordingly.  Reported by Jonathan Hankins
	<jonathan-hankins@mindspring.com>.

	* tramp-util.el (tramp-advice-executable-find): Check for
	`load-in-progress)'.
	(tramp-advice-call-process): Add check for
	`tramp-fish-file-name-handler'.
	(tramp-grep-setup, tramp-gud-setup, tramp-ediff-setup): Remove
	functions, and call defadvices directly. There is no need for
	`eval-after-load'.
	(top): Add defadvices for `gnus-1', `jka-compr-call-process' and
	`jka-compr-partial-uncompress'.

2006-09-08  Gilles Pion <gpion@lfdj.com>  (tiny change)
